--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/respawner8/pancakeswap_snipping_bot/issues"
   },
-  "homepage": "https://github.com/respawner8/pancakeswap_snipping_bot#readme"
+  "homepage": "https://github.com/respawner8/pancakeswap_snipping_bot#readme",
+  "dependencies": {
+    "ethers": "^5.4.1"
+  }
 }
